--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,18 +1,30 @@
 header {
-  background-color: $tertiary;
+  background-color: transparent;
   padding: $size-16;
+  position: absolute;
+  width: 100%;
+  z-index: 1;
+  text-transform: uppercase;
+
+  &.dark {
+    a {
+      color: $black;
+    }
+  }
 
   a {
     color: $white;
+    font-family: $font-bold;
     font-size: $size-16;
   }
 
   ul {
     display: flex;
     align-items: center;
+    justify-content: center;
     list-style-type: none;
     padding: 0;
-    gap: $size-16;
+    gap: $size-52;
   }
 
   li {
