--- a/src/styles/modules/_mediaCard.scss
+++ b/src/styles/modules/_mediaCard.scss
@@ -8,6 +8,7 @@
   &:hover {
     @media screen and (min-width: ($tablet-md)) {
       color: $tertiary;
+      text-decoration: underline;
     }
   }
 
